--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
         <h3 style= "color:#1eae98; font-size: 50px; font-family:'Times New Roman', Times, serif;" align="center">Ecommerce App</h3>
 
 <p align="center" style="margin:50px;">
+    <iframe src="/ss/video.mp4" height="490"></iframe>
   <img src="/ss/ss1.png" width="228">
   <img src="/ss/ss2.png" width="228">
   <img src="/ss/ss3.png" width="228">
   <img src="/ss/ss4.png" width="228">
   <img src="/ss/ss5.png" width="228">
   <img src="/ss/ss6.png" width="228">
-  <img src="/ss/ss14.png" width="228">
+  <img src="/ss/ss7.png" width="228">
+  <img src="/ss/ss8.png" width="228">
+  <img src="/ss/ss9.png" width="228">
   <img src="/ss/ss10.png" width="228">
   <img src="/ss/ss11.png" width="228">
-  <img src="/ss/ss12.png" width="228">
-  <img src="/ss/ss13.png" width="228">
 </p>
 
     </body>
