--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h3 style= "color:#1eae98; font-size: 50px; font-family:'Times New Roman', Times, serif;" align="center">Ecommerce App</h3>
-
+        <p style="color:#fff; font-size: 25px;" align="center">Tech stack and tools used: Flutter, Bloc Architecture, Node Js, Express Js, MongoDB, Heroku</p>
 <p align="center" style="margin:50px;">
     <iframe src="/ss/video.mp4" height="490"></iframe>
   <img src="/ss/ss7.png" width="228">
