--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <h3 style= "color:#1eae98; font-size: 50px; font-family:'Times New Roman', Times, serif;" align="center">Ecommerce App</h3>
         <p style="color:#fff; font-size: 25px;" align="center">Tech stack and tools used: Flutter, Bloc Architecture, Node Js, Express Js, MongoDB, Heroku</p>
 <p align="center" style="margin:50px;">
-    <iframe src="/ss/video.mp4" height="490"></iframe>
+    <iframe src="/ss/app.mp4" height="490"></iframe>
   <img src="/ss/ss7.png" width="228">
   <img src="/ss/ss5.png" width="228">
   <img src="/ss/ss1.png" width="228">
   <img src="/ss/ss4.png" width="228">
   <img src="/ss/ss2.png" width="228">
   <img src="/ss/ss3.png" width="228">
+  <img src="/ss/ss9.png" width="228">
+  <img src="/ss/ss12.png" width="228">
+  <img src="/ss/ss13.png" width="228">
+  <img src="/ss/ss14.png" width="228">
   <img src="/ss/ss6.png" width="228">
   <img src="/ss/ss8.png" width="228">
   <img src="/ss/ss9.png" width="228">
